--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="string_edit_note">Edit note</string>
     <string name="menu_delete">Delete</string>
     <string name="menu_select_all">Select all</string>
+    <string name="action_search">Search</string>
 </resources>
