--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="menu_delete">Delete</string>
     <string name="menu_select_all">Select all</string>
     <string name="action_search">Search</string>
+    <string name="widget_notes_not_found">Notes not found</string>
 </resources>
